--- a/_posts/develop/language/2025-03-11-java_02.markdown
+++ b/_posts/develop/language/2025-03-11-java_02.markdown
@@ -14,17 +14,18 @@ sidebar:
 # 식별자, 키워드, 예약어
 ## 식별자(identifier)
 
-**[ 식별자란? ]**
+**[ 정의 ]**
 > 클래스, 변수, 상수, 메소드 등에 붙이는 이름
 
-`원칙`<br>
+**[ 원칙 ]**<br>
 • 불가능: 특수문자(`@`, `#`, `!` 등), 공백, 탭, 예약어(키워드), 논리리터럴(`null`, `true`), 널리터럴(`false`)<br>
 • 가능: 한글, 유니코드(2byte)<br>
 • 첫문자에 : 숫자불가능, 일부 기호(`_`, `$`) 가능하지만 잘 안씀
 • 길이제한 없음<br>
 • 대소문자 구별
 
-`예시`
+
+**[ 예시 ]**
 
 ```java
 //가능
@@ -110,8 +111,6 @@ int 3Chapter; class if { } char false; void null() { } class %calc { } // 식별
 // 안녕 나는 주석이야
 ```
 
-<br>
-
 **[ 여러 줄 주석 ]**
 
 ```java
@@ -141,7 +140,7 @@ int 3Chapter; class if { } char false; void null() { } class %calc { } // 식별
 <br>
 
 **[ 종류 ]**
-`기본자료형(Primitive Data type)`
+**1) 기본자료형(Primitive Data type)**
 > 자바에서 직접 값을 저장하는 데이터 타입
 
 |자료형 구분|종류|
@@ -154,11 +153,11 @@ int 3Chapter; class if { } char false; void null() { } class %calc { } // 식별
 <br>
 
 
-`참조자료형(Reference Data type)`
+**2) 참조자료형(Reference Data type)**
 > 객체의 주소값을 저장하는 타입
 
-(1) 배열 (array): 같은 타입의 데이터를 연속적(메모리상 연속된 공간에)으로 저장하는 자료구조
-• 한 번 크기를 정하면 변경할 수 없음
+(1) 배열 (array): 같은 타입의 데이터를 연속적(메모리상 연속된 공간에)으로 저장하는 자료구조<br>
+• 한 번 크기를 정하면 변경할 수 없음<br>
 • 배열 사용하기
 
 ```java
@@ -220,6 +219,13 @@ class Person {
 
 (3) 인터페이스(interface): 다형성을 구현하기 위해 사용하는 참조형 타입
 
+• Interface (in Java)
+– 이름 정도만 있고 구체적인 내용/정의가 없는 클래스
+– (10장에서 상세히 공부한다)
+– 여러 클래스의 공통된 기능/인터페이스를 표준화하는 방법
+(~요구 스펙)
+
+
 ```java
 interface Animal {
     void makeSound();
@@ -231,11 +237,22 @@ interface Animal {
 
 (4) 문자열(string): 문자들의 집합이며, `String` 클래스의 객체로 취급됨
 
+ ‘문자열’을 표현하는 “클래스”
+– String msg1, msg2;
+– msg1 = “Hello”;
+• 내용 변경이 안 된다. 자르고 늘일 수도 없다.
+– 필요하면 새로운 객체로 만들어야 한다.
+• ‘+’ 연산자 = 스트링 접합/연결-> 새 객체를 생성
+– msg2 = msg1 + “World!”;
+// msg2 = msg2 + “World!”
+– System.out.println (“Salute: “ + msg2);
+// -> “Salute: HelloWorld!” - 제 3의 객체
+
+
 ```java
 String message = "Hello, Java!";
 ```
 
-class, 인터페이스, 문자열은 이후의 글에서 더 알아보도록 하자
 
 
 
@@ -312,6 +329,13 @@ System.out.println(“단풍잎 색은 “ + color);
 개발자의 의도적 형변환
 – ‘(자료형)’ 형식으로 명시적으로 형변환을 지정한다
 – 강제 변환은 값 손실 가능
+
+
+**[ 포장자(Wrapper) 클래스 ]**
+• ‘포장자’ 클래스
+– Primitive data type 데이터를 객체로 처리할 필요가 있을
+때 객체로 만들어(‘포장해’) 줄 수 있는 클래스
+– (참조형으로, 일종의 형변환 해주는 클래스)
 
 
 <br>
