--- a/_posts/daily/2025-03-22-pknu.md
+++ b/_posts/daily/2025-03-22-pknu.md
@@ -1,14 +1,28 @@
 ---
-title: "부경대 컴퓨터공학과 편입, 학점인정 후기"
-excerpt: "test"
+title: "부경대, 인제대 컴퓨터공학과 편입, 학점인정 후기"
+excerpt: "약 3개월간의 편입 준비기!"
 
 categories: 
   - daily
-tags: [daily]
+tags: [개발]
 toc: true
 author_profile: true 
 sidebar:
    nav: "docs"
 ---
 
-# test
+
+우선 부경대, 인제대 컴퓨터공학과 둘 다 합격하였다
+## 본인 스펙
+토익: 830<br>
+전적대: 학점은행제(부산대(밀양) > 학은제)<br>
+학점: 4.1<br>
+개발경력: 1년 이하(백엔드 개발자)<br>
+사용언어: 주로 java, 사용해본 언어는 c, node, asp, php, python 등
+## 준비과정
+11월: 첫째주~둘째주 동안 토익공부, 남은 11월 동안 파이썬 공부<br>
+12월: 자료구조는 교재+유튜브 공부, 컴퓨터공학개론(챗gpt 활용) 면접 문제 200선<br>
+1월: 면접 준비(12월의 연장선)
+## 부경대, 인제대 컴퓨터 공학과 편입 후기
+
+부경대와 인제대 모두 합격하였다!
