--- a/_posts/develop/ds_ai/2025-03-21-al03.md
+++ b/_posts/develop/ds_ai/2025-03-21-al03.md
@@ -67,15 +67,16 @@ sidebar:
 
 
 |용법 2|의미|설명|
-|:---:|:---:|:---:|:---:|
+|:---:|:---:|---|
 |`W(n)`|Worst-Case Time Complexity|최악의 경우 시간 복잡도, 알고리즘이 가장 비효율적일 때<br>입력 크기가 n일 때 모든 가능한 입력에 대해 알고리즘이 기본 연산을 수행하는 최대 횟수|
-|`A(n)`|Average-Case Time Complexity|평균적인 경우의 시간 복잡도<br>입력 크기가 n일 때 모든 가능한 입력에 대해 알고리즘이 기본 연산을 수행하는 평균 횟수|
+|`A(n)`|Average-Case Time Complexity|평균적인 경우의 시간 복잡도<br>입력 크기가 n일 때 모든 가능한 입력에 대해 알고리즘이 기본 연산을 수행하는 평균 횟수<br>크기가 n인 가능한 모든 입력에 확률을 할당해야 함|
 |`B(n)`|Best-Case Time Complexity|최선의 경우 시간 복잡도, 알고리즘이 가장 효율적일 때<br>입력 크기가 n일 때 모든 가능한 입력에 대해 알고리즘이 기본 연산을 수행하는 최소 횟수|
 
 
 `참고: 용법 2인 경우에만` <br>
 • T(n)에 W(n), A(n), B(n)이 포함<br>
-• A(n) = T(n), B(n) = T(n), W(n) = T(n)
+• A(n) = T(n), W(n) = T(n)<br>
+
 
 
 
@@ -101,7 +102,9 @@ sidebar:
 `T(n)=(n−1)+(n−2)+(n−3)+⋯+1` => `T(n)=(n−1)⋅n/2`(등차수열의 합 공식)<br>
 • 시간 복잡도: `T(n^2)`
 
-**행렬 곱셈(Matrix Multiplication)**
+**행렬 곱셈(Matrix Multiplication)**<br>
+> 가장 안쪽의 for 루프에서 실행되는 유일한 명령은 곱셈과 덧셈입니다. 이 알고리즘은 덧셈보다 곱셈을 더 적게 수행하도록 구현할 수 있다. 따라서 우리는 곱셈 연산만을 기본 연산으로 간주한다
+
 • 기본 연산: 가장 안쪽 for 루프에서 곱셈 연산 수행<br>
 • 입력 크기: n, 행과 열의 개수<br>
 `설명` for-i 루프에서 n번, for-j 루프에서 n번, 각 for-k 루프에서도 n번 실행<br>
@@ -119,9 +122,9 @@ sidebar:
 |:---:|---|
 |`W(n) = n`|x가 배열의 마지막 요소이거나 배열 내 존재하지 않는 경우로 기본 연산이 최대 n번 실행|
 |`B(n) = 1`|x가 첫 번째 요소일 경우 한 번만 실행됨|
-|`A(n)`|• x가 배열 내 존재한다고 가정하면, 배열 내 모든 위치에 있을 확률이 동일함<br>• x가 k번째 슬롯에 위치할 확률은 1/n, x를 찾기 위해 기본 연산이 k번 실행됨<br>• 시간 복잡도: A(n)= ∑ (k × 1/n) = 1/n x ∑k = (n+1)/2|
-|`A(n)`|x가 배열에 없을 수도 있는 경우<br>x가 배열 내 존재할 확률은 p 없을 확률은 1-p, x가 k번째 슬롯에 있을 확률 p/n,x가 존재하면 k번 실행, 존재하지 않으면 n번 실행<br>시간 복잡도: |
-|`A(n)`|특수한 경우: p = 1이면, A(n) = (n+1)/2,p = 1/2이면, A(n) = 3n/4 + 1/4, 즉 평균적으로 배열의 3/4을 탐색|
+|`A(n)`|• x가 배열 내 존재한다고 가정하면, 배열 내 모든 위치에 있을 확률이 동일함<br>• x가 k번째 슬롯에 위치할 확률은 $1/n$, $x$를 찾기 위해 기본 연산이 $k$번 실행됨<br>• 시간 복잡도: $A(n) = \sum_{k=1}^{n} \left( k \times \frac{1}{n} \right) = \frac{1}{n} \sum_{k=1}^{n} k = \frac{1}{n} \times \frac{n(n+1)}{2} = \frac{n+1}{2}$|
+|`A(n)`|x가 배열에 없을 수도 있는 경우<br>x가 배열 내 존재할 확률은 p, 없을 확률은 1-p, x가 k번째 슬롯에 있을 확률 p/n<br>x가 존재하면 k번 실행, 존재하지 않으면 n번 실행<br>시간 복잡도: $A(n) = \sum_{k=1}^{n} \left( k \times \frac{p}{n} \right) + n(1 - p)$ $= \frac{p}{n} \times \frac{n(n+1)}{2} + n(1 - p) = n\left(1 - \frac{p}{2} \right) + \frac{p}{2}$|
+|`A(n)`|특수한 경우:<br>• p = 1이면, $A(n) = (n + 1)/2$<br> • 1/2이면, $A(n) = \frac{3n}{4} + \frac{1}{4}$<br>즉 평균적으로 배열의 3/4을 탐색|
 
 
 <br>
@@ -131,9 +134,9 @@ sidebar:
 
 **(1) 일반적인 개념**
 **복잡도 함수 (complexity function)**
-> 양의 정수를 비음수 실수로 매핑하는 함수
+> 양의 정수를 비음수 실수로 매핑하는 임의의 함수 가 될 수 있음
 
-특정 알고리즘의 시간 복잡도 또는 메모리 복잡도를 지칭하지 않는 경우, 일반적으로 표준 함수 표기법을 사용한다. 
+특정 알고리즘의 시간 복잡도 또는 메모리 복잡도를 지칭하지 않는 경우, 일반적으로 `f(n)`이나 `g(n)` 같은 표준 함수 표기법을 사용
 
 ```
 `예`
@@ -160,13 +163,21 @@ f(n)=3n^2 +4n
 
 **비교 예제**
 두 개의 알고리즘이 동일한 문제를 해결한다고 가정하자<br>
-첫 번째 알고리즘: 시간 복잡도 O(n)<br>
-두 번째 알고리즘: 시간 복잡도 O(n2)<br>
-첫 번째 알고리즘이 더 효율적으로 보이지만, 특정 컴퓨터에서는 기본 연산을 처리하는 속도 차이에 따라 실행 시간이 달라질 수 있다.<br>
-해결할 부등식: `n×1000t < n^2×t`<br>
+
+> 첫 번째 알고리즘: 시간 복잡도 $O(n)$<br>
+두 번째 알고리즘: 시간 복잡도 $O(n^2)$
+
+• 첫 번째 알고리즘이 더 효율적으로 보이지만, 특정 컴퓨터에서는 기본 연산을 처리(제어명령을 포함한 전체 실행시간)하는 속도 차이에 따라 실행 시간이 달라질 수 있음<br>
+
+`ex` 첫번째 알고리즘이 기본연산을 1회 수행하는 데 두 번째 알고리즘보다 1000배 오래 걸린다면?<br>
+• 두 알고리즘 모두 오버헤드 명령 시간은 무시할 정도로 작다고 가정<br>
+• 첫 번째 알고리즘의 총 실행 시간: `n × 1,000t`, 두 번째 알고리즘의 총 실행 시간: `n² × t`<br>
+• 해결할 부등식: $n×1000t < n^2×t$
 
 <br>
 
 ## 정확성 분석 (Analysis of Correctness)
 요구 사항 (Requirement):<br>
-알고리즘이 제대로 동작하는지 검증하기 위해, 알고리즘이 의도한 대로 작동한다는 수학적 증명을 개발해야 함<br>
+알고리즘이 실제로 의도한 대로 동작하는지를 증명함으로써, 우리는 그 알고리즘의 **정당성(correctness)**을 분석할 수 있음<br>
+
+
