--- a/_posts/develop/language/2025-03-31-java_oop1.md
+++ b/_posts/develop/language/2025-03-31-java_oop1.md
@@ -266,6 +266,18 @@ public class Book {
 • super(…) : 생성자 내부에서 처음(first) 에만 호출 가능<br>
 👉 생성자 안의 첫 문장에서만 사용 가능
 
+```java
+// super (상위 클래스) 참조 
+// - 오버라이딩(대체)된 상위 클래스의 메서드나 변수에 접근할 때 사용
+// - 서브클래스 내부 어디에서든 호출 가능
+super.methodname(args);   // 상위 클래스의 메서드 호출
+super.studentYear;        // 상위 클래스의 변수 접근
+
+// 상위 클래스 생성자 호출
+// - 서브클래스 생성자 내부에서만 사용 가능
+// - 반드시 첫 번째 줄에 위치해야 함
+super(args);   // 생성자 호출
+````
 
 ```java
 public class Balloon {
