--- a/_posts/develop/language/2025-04-06-java_oop2.md
+++ b/_posts/develop/language/2025-04-06-java_oop2.md
@@ -220,50 +220,179 @@ class MaleStudent extends Student2 {
 <br>
 
 # 다형성 (feat. overriding)
+## 다형성이란
+**[ 클래스 상속에 의한 계층구조에서 method의 다형성 ]**
+> • 어떤 A라는 객체가 동작하는데 같은 상황임에도 불구하고
+다른 모습을 갖거나, 다른 동작을 하는 (것처럼 보이는) 현상
+• 상속 관계에서 overriding으로 나타나는 현상/특성
 
-> 문제: 다형성을 만드는 두가지 방법!
+**[ 예시 - animal farm choir ]**
+
+```java
+class Animal {
+    private int nLegs = 4;
+    public void talk() {
+    System.out.println(“조용~“);
+    }
+}
+
+class Dog extends Animal {
+    public void talk() { System.out.println(“멍멍!“); }
+}
+
+class Pig extends Animal {
+    public void talk() { System.out.println(“꿀꿀!“); }
+}
+
+class Snake extends Animal {
+private int legs = 0;
+}
+
+public class AnimalFarmChorus{
+    public static void main(Stirng[] args){
+        Dog aDog = new Dog();
+        Pig aPig = new Pig();
+
+        Animal animal;
+
+        // polymorphism
+        // 같아 보이는 animal 인데 talk()를 자동 선택해줌
+        animal = aDog;  // promotion: dog > animal
+        animal.talk();
+
+        animal = aPig;
+        animal.talk();
+
+        // without polymorphism
+        if(animal == aDog) aDog.talk();
+        else if(animal == aPig) aPig.talk();
+    }
+}
+
+// result: 멍멍 > 꿀꿀
+```
+
+
+문제: 다형성을 만드는 두가지 방법!
 
 <br>
 <br>
 <br>
+
+## 다형성의 실현
+> 상속관계에서 메쏘드 overriding으로 다형성 실현
+• 하나의 이름/(인터페이스)에 서로 다른 구현
+• 수퍼 클래스의 메쏘드 draw(), talk()를 여러 서브 클래스에서 각각 목적에 맞게
+다르게 (재)구현
+• Shape의 draw() 메소드를 Line, Rect, Circle에서‘대체’하여 다르게 구현
+
+```java
+// super class - Shape
+class Shape{
+    public void draW(){
+        System.out.println("Shape");
+    }
+}
+
+// super class - Line
+class Line extends Shape{
+    public void draW(){
+        System.out.println("Line");
+    }
+}
+
+// super class - Rect
+class Rect{
+    public void draW(){
+        System.out.println("Rect");
+    }
+}
+
+// super class - Circle
+class Circle{
+    public void draW(){
+        System.out.println("Circle");
+    }
+}
+```
+
 
 # 캐스팅과 기타 문법(static, fianl)
 
 **[ Casting ]**
 
-Promotion (승급)
-• subclass 객체를 superclass 객체로 치환
-• Animal animal = aDog;
-Demotion (강등)
-• superclass 객체를 subclass 객체로 치환
-• casting: 강제적 형변환이 필요하다 `Dog bDog = (Dog) animal;`
-• 컴파일러 타당/통과: animal이 위처럼 원래 Dog 객체가 아니었다면 실행할 때 오류가 발생
+|종류|내용|
+|:---:|---|
+|Promotion (승급)|• subclass 객체를 superclass 객체로 치환<br>• Animal animal = aDog;|
+|Demotion (강등)|• superclass 객체를 subclass 객체로 치환<br>• casting: 강제적 형변환이 필요하다 `Dog bDog = (Dog) animal;`<br>• 컴파일러 타당/통과: animal이 위처럼 원래 Dog 객체가 아니었다면 실행할 때 오류가 발생|
 
 **[ instanceof 연산자 ]**
-> instanceof 연산자
- 참조(변수)가 가리키는 객체의 유형(class) 식별
-형식: 객체_
-참조 instanceof 클래스_이름 -> 연산의 결과 : true 또는 false
-– 예.
-new Professor() 객체는 Professor 타입이면서, 동시에
-Employee 타입이기도 하고, Person 타입이기도 함
+> 💡 `instanceof` 연산자<br>
+참조(변수)가 가리키는 객체의 유형(class) 식별<br>
+• 형식: `객체_참조 instanceof 클래스명`<br>
+• 연산의 결과: `true`, `false`
+
+```java
 Person p = new Professor();
-If (p instanceof Person) If (p instanceof Student) If (p instanceof Employee) If (p instanceof Professor) // true
-// true
-// true
-// false. Student를 상속받지 않았다
+// new Professor() 객체는 Professor 타입이면서, 동시에 Employee 타입이기도 하고, Person 타입이기도 함
+
+If (p instanceof Person)        //true
+If (p instanceof Student)       // false. Student를 상속받지 않았다
+If (p instanceof Employee)      // true 
+If (p instanceof Professor)     // true
+
 If ("java" instanceof String) // true
+
 If (3 instanceof int) // 문법 오류. instanceof는 참조 자료형에만 사용
+```
+
+
+
+
 
 
 **[ final and static ]**
 
-• non-overridable [class] variable
-– static final float CmPerInch = 2.54;
+> 오버라이드(재정의) 불가능한 클래스 변수<br>
+• static final로 선언된 변수는 변경할 수 없는 상수<br>
+• 클래스 차원에서 고정된 값
+
+```java
+static final float CmPerInch = 2.54;
+```
+
+`본질적으로 상수인 변수들 (constant)`<br>
+• final static 조합은 상수 선언에 자주 사용<br>
+• 공용(static)이고, 변경 불가능(final)함
 
 
-`class A: final int a`
-`class B: float a` ㅌㅌ
-• Essentially constants
-– public final static float C =2.9989E+10f;
-– public final static int SCREEN_WIDTH = 640;
+```java
+public final static float C = 2.9989E+10f;
+public final static int SCREEN_WIDTH = 640;
+```
+
+
+`주의` 오버라이드 금지 예시
+
+```java
+class A {
+    final int a;
+}
+
+class B extends A {
+    float a;   // ❌ 오류! final 변수는 하위 클래스에서 재정의 불가
+}
+```
+
+```java
+final class Dinosaur { ... }
+
+void with(final Animal a) {
+    // a = new Animal(); ← ❌ final 파라미터는 값 변경 불가
+    a.talk();            // ✅ 사용은 가능
+}
+
+// final class: 상속 금지
+// final parameter: 메서드 매개변수 값 변경 불가
+```
+
