--- a/_posts/develop/language/2025-04-06-java_oop2.md
+++ b/_posts/develop/language/2025-04-06-java_oop2.md
@@ -15,10 +15,10 @@ sidebar:
 ## 상속의 개념
 
 **[ 상속이란 ]**
-> 
+> 상속이란, 기존에 정의된 **클래스(부모 클래스, 상위 클래스)**의 속성과 메서드를 새로운 **클래스(자식 클래스, 하위 클래스)**가 물려받아 재사용할 수 있도록 하는 개념
 
 
-**[ 상속을 사용하는 이유 ]**
+**[ 상속을 사용하는 이유 ]**<br>
 • 소프트웨어를 재사용(reuse)하는 방법<br>
 • general class definition -> specialized class를 간단하고 효과적으로 정의 `참고`<br>
 
@@ -29,9 +29,9 @@ sidebar:
 
 **[ Inter-class Relationships ]**<br>
 **IsA relation(상속 관계)**<br>
-하위 타입(subtype)을 정의함
-주로 공통적인 속성과 기능을 재사용하고자 할 때 사용
-A가 B의 일종이다 라는 의미: "자동차는 탈것(Vehicle)의 일종이다" → Automobile extends Vehicle
+하위 타입(subtype)을 정의함<br>
+주로 공통적인 속성과 기능을 재사용하고자 할 때 사용<br>
+A가 B의 일종이다 라는 의미: "자동차는 탈것(Vehicle)의 일종이다" → Automobile extends Vehicle<br>
 Java에서 extends 키워드를 사용함
 
 ```java
@@ -59,10 +59,10 @@ class Automobile extends Vehicle { ... }
 
 
 **HasA relation(포함 관계)**<br>
-복합 객체(composite)를 정의함
-객체를 하위 구성요소로 포함함
-코드에서는 클래스 내부에 다른 객체 타입을 필드로 선언함으로써 표현
-이런 관계는 클래스 내부에 부품처럼 다른 객체를 조립해서 쓰는 구조
+복합 객체(composite)를 정의함<br>
+객체를 하위 구성요소로 포함함<br>
+코드에서는 클래스 내부에 다른 객체 타입을 필드로 선언함으로써 표현<br>
+이런 관계는 클래스 내부에 부품처럼 다른 객체를 조립해서 쓰는 구조<br>
 A가 B를 갖고 있다는 의미: "자동차는 바퀴를 갖고 있다" → 자동차 클래스 안에 Wheel 객체를 포함
 
 ```java
@@ -73,14 +73,13 @@ class Automobile ... {
 }
 ```
 
-일반화와 특수화
 
 **[ Object 클래스와 메서드들]**<br>
 **정의**
-> `Object` 클래스
-클래스 계층 구조의 최상위 클래스로, 모든 클래스는 Object의 메소드를 자동으로 상속 
-클래스 계층의 뿌리 (※ `객체`가 아닌 `Object`라는 이름)
-java.lang 패키지에 정의되어 있음
+> `Object` 클래스<br>
+클래스 계층 구조의 최상위 클래스로, 모든 클래스는 Object의 메소드를 자동으로 상속 <br>
+클래스 계층의 뿌리 (※ `객체`가 아닌 `Object`라는 이름)<br>
+java.lang 패키지에 정의되어 있음<br>
 모든 클래스의 슈퍼클래스 (기본 명세 제공)
 
 ```java
@@ -96,14 +95,12 @@ wait([long][, nanosec]) // 멀티스레드 간의 대기/알림 기능
 ```
 
 **참고**
-java SE document를 구글에 검색해서 → Oracle의 공식 Java API 문서에 들어감
-
-java.base 모듈 → java.lang 패키지 → Object 클래스를 확인
-
+java SE document를 구글에 검색해서 → Oracle의 공식 Java API 문서에 들어감<br>
+java.base 모듈 → java.lang 패키지 → Object 클래스를 확인<br>
 클래스 계층과 함께 Object 클래스의 메소드 요약(설명 포함)을 볼 수 있음
 
 
-**[ 요약 ]**
+**[ 요약 ]**<br>
 • 상위 클래스의 변수/메소드를 상속-> 재활용 한다<br>
 `(e.g., student: getName() == super.getName())`<br>
 • 모든 (학생/교수/직원)을 한 가지의 종류(Person)으로 다
@@ -221,9 +218,8 @@ class MaleStudent extends Student2 {
 
 # 다형성 (feat. overriding)
 ## 다형성이란
-**[ 클래스 상속에 의한 계층구조에서 method의 다형성 ]**
-> • 어떤 A라는 객체가 동작하는데 같은 상황임에도 불구하고
-다른 모습을 갖거나, 다른 동작을 하는 (것처럼 보이는) 현상
+**[ 클래스 상속에 의한 계층구조에서 method의 다형성 ]**<br>
+> • 어떤 A라는 객체가 동작하는데 같은 상황임에도 불구하고 다른 모습을 갖거나, 다른 동작을 하는 (것처럼 보이는) 현상<br>
 • 상속 관계에서 overriding으로 나타나는 현상/특성
 
 **[ 예시 - animal farm choir ]**
@@ -280,10 +276,9 @@ public class AnimalFarmChorus{
 <br>
 
 ## 다형성의 실현
-> 상속관계에서 메쏘드 overriding으로 다형성 실현
-• 하나의 이름/(인터페이스)에 서로 다른 구현
-• 수퍼 클래스의 메쏘드 draw(), talk()를 여러 서브 클래스에서 각각 목적에 맞게
-다르게 (재)구현
+> 상속관계에서 메쏘드 overriding으로 다형성 실현<br>
+• 하나의 이름/(인터페이스)에 서로 다른 구현<br>
+• 수퍼 클래스의 메쏘드 draw(), talk()를 여러 서브 클래스에서 각각 목적에 맞게/다르게 (재)구현<br>
 • Shape의 draw() 메소드를 Line, Rect, Circle에서‘대체’하여 다르게 구현
 
 ```java
