--- a/_posts/develop/language/2025-03-11-java_02.markdown
+++ b/_posts/develop/language/2025-03-11-java_02.markdown
@@ -1,5 +1,5 @@
 ---
-title: "자바의 기초 문법 총정리"
+title: "[자바기초] 자바의 기초 문법 총정리"
 excerpt: " 식과문장, 키워드와 예약어, 주석, 변수와 자료형, 연산자, 제어문"
 categories:
   - language
