--- a/_posts/develop/language/2025-03-31-java_oop1.md
+++ b/_posts/develop/language/2025-03-31-java_oop1.md
@@ -27,18 +27,19 @@ sidebar:
 
 |분류|내용|
 |:---:|---|
-|필드 = 멤버 변수(member variables)|클래스 내부에 선언되는 데이터 저장 공간<br>• class var: static/class-wide-global, 전역<br>• instance var: Local (객체 안, within an object)|
-|메쏘드(methods) = 멤버 함수(member functions)|클래스 내부의 기능(동작)을 정의|
+|필드 = 멤버 변수(member variables)|클래스 내부에 선언되는 데이터 저장 공간<br>• class var: static(선언)/class-wide-global(클래스 전체 공유), 전역<br>• instance var: Local (객체 안, within an object), 객체마다 따로 존재|
+|메쏘드(methods) = 멤버 함수(member functions)|• 클래스 내부의 기능(동작)을 정의<br>• 클래스 안에서 정의되는 함수로, 멤버 변수에 접근하거나 동작을 수행|
 
 `참고` 멤버변수와 메서드들은 공개(public)혹은 비공개(private)로 선언 가능
 
 ```java
-public class Player{
-	private int age;
-	String name;
-	public int getAge(){
-		return age;
-	}
+public class Player {
+    private int age;       // private 멤버 변수
+    public String name;    // public 멤버 변수
+
+    public int getAge() {  // public 메서드
+        return age;
+    }
 }
 ```
 
