--- a/_posts/develop/language/2025-04-06-java_oop2.md
+++ b/_posts/develop/language/2025-04-06-java_oop2.md
@@ -10,8 +10,11 @@ sidebar:
    nav: "docs"
 ---
 
+<br>
+<br>
+<br>
 
-# 상속(Ingeritance)
+# 상속(Inheritance)
 ## 상속의 개념
 
 **[ 상속이란 ]**
@@ -20,21 +23,21 @@ sidebar:
 
 **[ 상속을 사용하는 이유 ]**<br>
 • 소프트웨어를 재사용(reuse)하는 방법<br>
-• general class definition -> specialized class를 간단하고 효과적으로 정의 `참고`<br>
-
-`참고` 클래스의 정의해 필요한 정보만 추가, 기존내용 변경을 통해
+• general class definition -> specialized class를 간단하고 효과적으로 정의 <br>
+• 기존내용을 변경해 클래스를 정의하여 필요한 정보만 추가
 
 
 ## 상속과 객체 간 관계
 
 **[ Inter-class Relationships ]**<br>
 **IsA relation(상속 관계)**<br>
-하위 타입(subtype)을 정의함<br>
-주로 공통적인 속성과 기능을 재사용하고자 할 때 사용<br>
-A가 B의 일종이다 라는 의미: "자동차는 탈것(Vehicle)의 일종이다" → Automobile extends Vehicle<br>
-Java에서 extends 키워드를 사용함
+> • 하위 타입(subtype)을 정의함<br>
+• 주로 공통적인 속성과 기능을 재사용하고자 할 때 사용<br>
+• A(자식클래스)가 B(부모클래스)의 일종이다 라는 의미<br>
+• Java에서 extends 키워드를 사용함
 
 ```java
+// 자동차는 탈것(Vehicle)의 일종이다
 class Automobile extends Vehicle { ... }
 ```
 
@@ -59,13 +62,14 @@ class Automobile extends Vehicle { ... }
 
 
 **HasA relation(포함 관계)**<br>
-복합 객체(composite)를 정의함<br>
-객체를 하위 구성요소로 포함함<br>
-코드에서는 클래스 내부에 다른 객체 타입을 필드로 선언함으로써 표현<br>
-이런 관계는 클래스 내부에 부품처럼 다른 객체를 조립해서 쓰는 구조<br>
-A가 B를 갖고 있다는 의미: "자동차는 바퀴를 갖고 있다" → 자동차 클래스 안에 Wheel 객체를 포함
+• 복합 객체(composite)를 정의함<br>
+• 객체를 하위 구성요소로 포함함<br>
+• 코드에서는 클래스 내부에 다른 객체 타입을 필드로 선언함으로써 표현<br>
+• 이런 관계는 클래스 내부에 부품처럼 다른 객체를 조립해서 쓰는 구조<br>
+• A가 B를 갖고 있다는 의미
 
 ```java
+// 자동차는 바퀴를 갖고 있다" → 자동차 클래스 안에 Wheel 객체를 포함
 class Automobile ... {
     Color shade;
     Wheel wheels[4];
@@ -73,6 +77,7 @@ class Automobile ... {
 }
 ```
 
+<br>
 
 **[ Object 클래스와 메서드들]**<br>
 **정의**
@@ -228,7 +233,7 @@ class MaleStudent extends Student2 {
 class Animal {
     private int nLegs = 4;
     public void talk() {
-    System.out.println(“조용~“);
+        System.out.println(“조용~“);
     }
 }
 
@@ -241,7 +246,7 @@ class Pig extends Animal {
 }
 
 class Snake extends Animal {
-private int legs = 0;
+    private int legs = 0;
 }
 
 public class AnimalFarmChorus{
@@ -269,8 +274,22 @@ public class AnimalFarmChorus{
 ```
 
 
-문제: 다형성을 만드는 두가지 방법!
+## 다형성을 만드는 두가지 방법!
+**[ 메서드 오버로딩 (Method Overloading) ]**<br>
+> • 같은 이름의 메서드/생성자를 매개변수만 다르게 정의하는 것(반환형만 다르면 안됨)<br>
+• **컴파일 시점(polymorphism at compile time)**에 어떤 메서드가 호출될지 결정됨
 
+**[ 메서드 오버라이딩 (Method Overriding) ]**<br>
+> • 상속받은 메서드를 하위 클래스에서 재정의하여 다른 동작을 하게 함<br>
+• **실행 시점(polymorphism at runtime)**에 어떤 메서드가 호출될지 결정됨
+
+|구분|오버로딩|오버라이딩|
+|---|---|---|
+|다형성 종류|컴파일 타입 다형성|런타임 다형성|
+|대상|같은 클래스, 상속 관계|상속 관계에서만|
+|조건|이름은 같고, 매개변수가 다름|이름, 매개변수, 반환형 모두 동일|
+|결정시점|컴파일|실행|
+|@Overrid 필요|필요없음|권장|
 <br>
 <br>
 <br>
@@ -311,6 +330,9 @@ class Circle{
 }
 ```
 
+<br>
+<br>
+
 
 # 캐스팅과 기타 문법(static, fianl)
 
@@ -342,12 +364,22 @@ If (3 instanceof int) // 문법 오류. instanceof는 참조 자료형에만 사
 ```
 
 
-
+<br>
 
 
 
 **[ final and static ]**
 
+```java
+final
+ ├─ 변수      → 값 고정 (변경 ❌)
+ ├─ 메서드    → 자식 클래스에서 오버라이딩 ❌
+ └─ 클래스    → 다른 클래스가 상속 ❌
+
+//클래스에 final이 붙으면 상속자체가 X > 오버라이딩 X
+```
+
+`static final`
 > 오버라이드(재정의) 불가능한 클래스 변수<br>
 • static final로 선언된 변수는 변경할 수 없는 상수<br>
 • 클래스 차원에서 고정된 값
