--- a/_posts/develop/ds_ai/2025-03-23-al5.md
+++ b/_posts/develop/ds_ai/2025-03-23-al5.md
@@ -1,5 +1,5 @@
 ---
-title: "[알고리즘] 분할정복과"
+title: "[알고리즘] 분할정복과 알고리즘"
 categories:
   - ds_ai
 tags: [알고리즘]
@@ -11,280 +11,175 @@ sidebar:
 ---
 <br>
 <br>
+<br>
+
+
+# 분할 정복(Divide and Conquer)과 기본 알고리즘
+
+## Divide and Conquer 개념 및 Top-Down 방식
+
+**[ 분할정복법 ]**
+> `분할 정복법`은 문제를 더 작은 하위 문제로 나누고, 각 하위 문제를 독립적으로 해결한 뒤, 그 결과를 합쳐 원래 문제의 해답을 구하는 알고리즘 설계 기법<br>
+• `Divide (분할)`: 문제를 더 작은 하위 문제로 나눔<br>
+• `Conquer (정복)`: 하위 문제를 재귀적으로 해결<br>
+• `Combine (결합)`: 하위 문제의 해를 이용해 전체 문제의 해를 구성
+
+
+**[ top-down 방식 ]**<br>
+> • 하나의 문제 인스턴스를 두 개 이상의 더 작은 인스턴스로 나눔<br>
+• 더 작은 인스턴스들의 해답을 쉽게 구할 수 있으면, 이 해답을 결합하여 원래 문제의 해답을 얻을 수 있음
+
+`참고` bottop-up 방식<br>
+• 가장 작은 문제부터 시작해서 차례대로 큰 문제를 해결<br>
+• 작은 문제의 결과를 저장하고 재사용 (동적 계획법에서 자주 사용)<br>
+• 반복문을 이용해 구현됨<br>
+• 예: 동적 계획법(Dynamic Programming), 피보나치 수열의 DP 구현
+
+
+<br>
+
+## Binary Search (이진 탐색) - 재귀적
+
+**[ Binary Search 문제 ]**<br>
+**`정의`**  
+> 정렬된(비감소 순서) 배열에서 키 `x`의 위치를 찾는 문제
+
+**`방법`** 
+> 배열의 가운데 항목과 `x`를 비교함<br>
+• 같으면 알고리즘 종료<br>
+• 다르면 배열을 두 부분으로 나눔: 가운데 항목의 왼쪽 부분, 가운데 항목의 오른쪽 부분
+
+**`핵심 단계`**  <br>
+• 배열을 절반 크기의 두 부분으로 나눈다: `x`가 가운데보다 작으면 왼쪽 부분, 크면 오른쪽 부분 선택 <br>
+• 해당 부분에서 `x`가 있는지 확인, 크기가 충분히 작지 않으면 재귀 호출 사용  <br>
+• 해당 부분에서의 결과가 전체 배열에 대한 해답이 됨
+
+**`특이사항`**  
+> 작은 인스턴스로 나누지만, 그들의 **출력을 결합하지 않음**
+
+<br>
+
+**[ 이진 탐색 알고리즘 설계 ]**<br>
+**`기본 설계 원칙`**  <br>
+• 더 작은 인스턴스의 해로부터 원래 문제의 해를 구하는 방법 개발  <br>
+• 종료 조건 설정  <br>
+• 종료 조건에 해당하는 경우의 해 결정
+
+**`프로그래밍 시 유의사항`**<br>
+• 재귀 호출에서 값이 바뀌는 변수만 인자로 사용<br>
+• **꼬리 재귀(tail-recursion)** 사용 권장: 재귀 호출 이후 작업 없음, 반복문으로 전환 시 메모리 효율성 ↑
+
+**`주의`**<br>
+• 재귀 루틴의 경우, **스택에 쌓이는 activation record 수는 재귀 깊이에 비례함**
+
+<br>
+
+**`예시`**
+
+> 정렬된 배열에서 `x = 18`을 찾는 과정:
+
+```
+[10 12 13 14 18 20 25 27 30 35 40 45 47]
+
+- 25와 비교 → x < 25 → 왼쪽 선택
+- 13과 비교 → x > 13 → 오른쪽 선택
+- 18과 비교 → x = 18 → 탐색 성공
+```
+
+<br>
+
+**`의사코드`**
+
+```c
+/*
+input: 정수 n, 정렬된 배열 S[1...n], 탐색 키 x 
+output: x가 있는 위치(없으면 0 반환)
+*/
+index location(index low, index high)
+{
+    index mid;
+    if (low > high)
+        return 0;
+    else {
+        mid = ⌊(low + high) / 2⌋;
+        if (x == S[mid])
+            return mid;
+        else if (x < S[mid])
+            return location(low, mid - 1);
+        else
+            return location(mid + 1, high);
+    }
+}
+```
+
+
+**[ 최악의 시간 복잡도 분석 ]**<br>
+• 재귀 함수: $t_n = t_{n/2} + 1,\quad t_1 = 1$<br>
+• 몇 가지 값으로 확인: $t_2 = 2, t_4 = 3, t_8 = 4, t_16 = 5$<br>
+• 일반화: $t_n = \log_2 n + 1$<br>
+• 귀납적 증명:<br>
+👉 **기초**: $t_1 = \log_2 1 + 1 = 1$<br>
+👉 **귀납 단계**: $t_{2n} = \log_2(2n) + 1$
+
+
+
+<br>
+
+
+## Merge Sort (합병 정렬)
+
+## Quick Sort (퀵 정렬)
+
+## 각 알고리즘의 재귀적 구조 및 시간 복잡도 분석
 
 
 <br>
 <br>
+<br>
 
+# 고급 알고리즘과 최적화
+Strassen의 행렬 곱셈 알고리즘
 
+큰 정수 곱셈 및 개선된 알고리즘
 
+Threshold 개념 (알고리즘 전환 시점)
 
 
+<br>
+<br>
+<br>
 
-# Divide and Conquer 
-## Divide and Conquer (분할 정복) 소개
+# 재귀 관계식의 수학적 해석
+수학적 귀납법을 통한 해법
 
-- **Top-Down 접근 방식**  
-  → 문제 인스턴스를 더 작은 인스턴스로 나누고  
-  → 더 작은 문제들의 해를 결합하여 원래 문제를 해결함
+Factorial 및 단순한 예제 풀이
 
----
+시간 복잡도 분석의 기초로서의 재귀식
 
-## 🔹 2. 이진 탐색 (Binary Search)의 원리
 
-- **정의:**  
-  정렬된 배열에서 특정 키 \( x \)가 있는지를 탐색
+<br>
+<br>
+<br>
 
-- **기본 원리:**  
-  1. 배열의 **중간 원소**를 찾는다  
-  2. \( x \)가 중간 값보다 작으면 **왼쪽 부분 배열**로  
-     크면 **오른쪽 부분 배열**로 이동  
-  3. 이 과정을 반복 (재귀)
+# 재귀식 풀이 고급 기법
 
-- **Divide and Conquer 구조에 대응되는 방식**  
-  - **Divide:** 배열을 두 부분으로 나눈다  
-  - **Conquer:** 해당 부분에 대해 재귀 수행  
-  - **Obtain:** 하위 문제의 결과가 곧 전체 문제의 결과  
-    (이진 탐색은 결과 결합 필요 없음)
+특성 방정식을 이용한 해법 (동차 / 비동차)
 
-> ⚠️ 이진 탐색은 출력 결합(combination of outputs)이 필요 없는 특별한 분할 정복 알고리즘
+일반해 도출, 상수 결정, 다항식 포함 사례
 
----
+변수 치환 기법과 대입법(Substitution)
 
-## 🔹 3. 이진 탐색 알고리즘 설계
 
-- **재귀 설계 절차**
-  - (1) 더 작은 인스턴스로 나누는 방법을 정의
-  - (2) 종료 조건(terminal condition)을 명확히 설정
-  - (3) 종료 조건에 도달했을 때 결과를 반환
+<br>
+<br>
+<br>
 
-- **꼬리 재귀 사용**
-  - 재귀 호출 이후 추가 연산 없음
-  - 반복문으로 쉽게 변환 가능 → 메모리 효율 증가
+# 점근적 분석 및 마스터 정리
 
-- 📌 **스택 깊이**는 재귀 호출 깊이에 따라 결정됨  
-  → 깊이가 클수록 메모리 사용량 증가
 
----
+시간 복잡도 함수 분석 (lg n, n log n 등)
 
-## 🔹 4. 재귀 관계와 시간 복잡도 분석
+일반 n에 대한 확장 기법
 
-### ▶ Worst-Case Time Complexity
-
-- 재귀 관계식:
-
-\[
-W(n) = W(n/2) + 1
-\]
-
-→ 하나의 비교 + 하위 문제 \( n/2 \)에 대한 재귀 호출
-
-- 재귀 함수로 표현:
-
-\[
-t_n = t_{n/2} + 1, \quad t_1 = 1 \quad (\text{단, } n = 2^k)
-\]
-
-- 몇 가지 값으로 살펴보면:
-
-| \( n \) | \( t_n \) 계산 과정     | 결과 |
-|--------|--------------------------|------|
-| 2      | \( t_1 + 1 \)             | 2    |
-| 4      | \( t_2 + 1 = 2 + 1 \)     | 3    |
-| 8      | \( t_4 + 1 = 3 + 1 \)     | 4    |
-| 16     | \( t_8 + 1 = 4 + 1 \)     | 5    |
-
-⇒ 즉, \( t_n = \log_2 n + 1 \)
-
----
-
-### ▶ 귀납적 증명 (Induction)
-
-- **기본 단계:**
-
-\[
-t_1 = 1 = \log_2 1 + 1
-\]
-
-- **귀납 단계:**  
-  \( t_{2n} = t_n + 1 = \log_2 n + 1 + 1 = \log_2 (2n) + 1 \)
-
----
-
-## ✅ 최종 정리
-
-| 요소 | 내용 |
-|------|------|
-| 접근 방식 | Divide and Conquer (분할 정복) |
-| 설계 방식 | 재귀적 분할 → 종료 조건 → 해 결합 (or 그대로 반환) |
-| 이진 탐색 구조 | Divide: 반으로 나눔<br>Conquer: 재귀 탐색<br>Obtain: 해당 결과가 최종 결과 |
-| 시간 복잡도 | 최악의 경우: \( \log_2 n + 1 \) |
-
----
-
-필요하면 이 내용을 마크다운 / 노션 블록 형태 / 프린트용 PDF로도 정리해드릴게요!
-
-
-완벽히 이해했습니다!  
-**앞서 번역해드린 한국어 문장을 그대로 유지**하면서, **순서만 바꿔서 논리적으로 더 이해하기 쉽게** 정리해드릴게요.  
-슬라이드 순서보다는 **실제 동작 순서(정의 → 알고리즘 → 병합)** 중심으로 구성했습니다.
-
----
-
-# 📚 Mergesort 알고리즘 (순서 재구성 + 번역문 유지)
-
----
-
-## ✅ 1. Mergesort 2 (in-place-sort)
-
-### 🔹 Mergesort 2
-
-**문제:**  
-\( n \)개의 키를 비내림차순으로 정렬하라.
-
-**입력:**  
-양의 정수 \( n \), 키 배열 \( S \), 인덱스는 1부터 \( n \)까지
-
-**출력:**  
-비내림차순으로 정렬된 키를 담고 있는 배열 \( S \)
-
-```c
-void mergesort2 (index low, index high)
-{
-  index mid;
-
-  if (low < high) {
-    mid = ⌊(low + high)/2⌋;
-    mergesort2(low, mid);
-    mergesort2(mid + 1, high);
-    merge2(low, mid, high);
-  }
-}
-```
-
----
-
-### 🔹 Merge 2
-
-**문제:**  
-Mergesort 2에서 생성된 \( S \)의 두 정렬된 부분 배열을 병합하라.
-
-**입력:**  
-인덱스 \( low \), \( mid \), \( high \), 배열 \( S \)의 구간 \( [low, high] \)  
-→ \( [low, mid] \)와 \( [mid+1, high] \)는 이미 정렬되어 있음
-
-**출력:**  
-\( S \)의 부분 배열 \( [low, high] \)이 비내림차순으로 정렬된 상태
-
-```c
-void merge2 (index low, index mid, index high)
-{
-  index i, j, k;
-  keytype U[low..high];  // 병합을 위한 지역 배열
-
-  i = low; j = mid + 1; k = low;
-  while (i ≤ mid && j ≤ high) {
-    if (S[i] < S[j]) {
-      U[k] = S[i];
-      i++;
-    }
-    else {
-      U[k] = S[j];
-      j++;
-    }
-    k++;
-  }
-
-  if (i > mid)
-    move S[j] through S[high] to U[k] through U[high];
-  else
-    move S[i] through S[mid] to U[k] through U[high];
-
-  move U[low] through U[high] to S[low] through S[high];
-}
-```
-
----
-
-## ✅ 2. Mergesort 기본 버전 (with extra space)
-
-### 🔹 Mergesort
-
-**문제:**  
-\( n \)개의 키를 비내림차순으로 정렬하라.
-
-**입력:**  
-양의 정수 \( n \), 키 배열 \( S \), 인덱스는 1부터 \( n \)까지
-
-**출력:**  
-비내림차순으로 정렬된 키를 담고 있는 배열 \( S \)
-
-```c
-void mergesort (int n, keytype S[])
-{
-  if (n > 1) {
-    const int h = ⌊n / 2⌋, m = n - h;
-    keytype U[1..h], V[1..m];
-    copy S[1] through S[h] to U[1] through U[h];
-    copy S[h+1] through S[n] to V[1] through V[m];
-    mergesort(h, U);
-    mergesort(m, V);
-    merge(h, m, U, V, S);
-  }
-}
-```
-
-> *→ 병렬적인 공간을 필요로 한다.*
-
----
-
-### 🔹 Merge
-
-**문제:**  
-정렬된 두 배열을 하나의 정렬된 배열로 병합하라.
-
-**입력:**  
-양의 정수 \( h \), \( m \), 정렬된 배열 \( U[1..h] \), \( V[1..m] \)
-
-**출력:**  
-\( U \)와 \( V \)의 키를 포함한, 1부터 \( h + m \)까지 인덱싱된 정렬된 배열 \( S \)
-
-```c
-void merge (int h, int m, const keytype U[],
-            const keytype V[], keytype S[])
-{
-  index i, j, k;
-  i = 1; j = 1; k = 1;
-  while (i <= h && j <= m) {
-    if (U[i] < V[j]) {
-      S[k] = U[i];
-      i++;
-    }
-    else {
-      S[k] = V[j];
-      j++;
-    }
-    k++;
-  }
-
-  if (i > h)
-    copy V[j] through V[m] to S[k] through S[h+m];
-  else
-    copy U[i] through U[h] to S[k] through S[h+m];
-}
-```
-
-> *→ Inplace sort가 아니다 (추가 공간을 만들어 사용함)*
-
----
-
-## ✅ 3. Mergesort 실행 예시
-
-**Mergesort Algorithm Example**
-
-- 입력: `27, 10, 12, 20, 25, 13, 15, 22`
-- 과정: Divide → Divide → Merge → Merge → ... → 최종 병합
-- 결과: `10, 12, 13, 15, 20, 22, 25, 27`
-
-(이미지 생략 – 분할 & 병합 트리)
+Master Theorem 및 확장 사례
 
