--- a/_posts/develop/language/2025-03-10-java_01.markdown
+++ b/_posts/develop/language/2025-03-10-java_01.markdown
@@ -104,7 +104,7 @@ sidebar:
 
 > `JVM < JRE < JDK` 의 포함관계를 가진다
 
-**[ JVM (Java Virtual Machine) - 자바 가상 머신 ]**
+**[ JVM (Java Virtual Machine) - 자바 가상 머신 ]**<br>
 • 자바 바이트코드를 실행하는 소프트웨어  <br>
 • 모든 (HW)플랫 폼에 설치: 플랫폼마다 다른 JVM이 존재하지만, 동일한 실행 환경 제공  <br>
 • JVM 자체는 플랫폼에 종속적, 다양한 회사에서 공급<br>
@@ -125,16 +125,14 @@ sidebar:
 • 자바 가상 기계가 해석하는(인터프리터) 방식으로 바이트 코드 실행<br>
 • 자바 가상 기계가 작동준인 플랫폼에서 실행
 
-<br>
 
-**[ JRE (Java Runtime Environment) - 자바 실행 환경 ]**
+**[ JRE (Java Runtime Environment) - 자바 실행 환경 ]**<br>
 • 자바 프로그램을 실행하기 위한 환경  <br>
 • JVM과 자바 API(라이브러리)들이 들어있는 모듈파일<br>
 • 개발자가 아닌 일반 사용자는 JRE만 설치하면 자바 프로그램 실행 가능  
 
-<br>
 
-**[ JDK (Java Development Kit) - 자바 개발 키트 ]**
+**[ JDK (Java Development Kit) - 자바 개발 키트 ]**<br>
 • 자바 애플리케이션을 개발하고 실행할 수 있는 도구 모음  <br>
 • JDK는 JRE와 추가적인 개발 도구(컴파일러, 디버거 등)를 포함  <br>
 • 자바 코드를 작성하고 실행하려면 반드시 JDK가 필요  <br>
@@ -163,20 +161,18 @@ sidebar:
 **[실행 환경]**<br>
 > 자바가상기계 + 자바 플랫폼의 클래스 라이브러리(자바 API)
 
-<br>
 
 **[응용프로그램 실행]**<br>
 • `main()` 함수(method)를 가진 `class`의 `main()`에서 시작<br>
 • JVM이 필요할 때 클래스 파일을 탑재함: 적은 메모리로 실행가능
 
 <br>
-<br>
 
 ## 자바와 C/C++의 실행방식 차이
 
 |비교|Java|C/C++|
 |:---:|:---:|:---:|
-||자바원시파일(-.java)<br><br>컴파일러<br>바이트코드(-.class)<br>하드웨어 - 운영체제 - JVM - 자바프로그램|C 원시파일(-.cpp)<br>컴파일러/링커<br>바이너리 실행 파일(-.exe)<br>하드웨어 - 운영체제 - C/C++ 프로그램|
+||자바원시파일(-.java)<br>컴파일러<br>바이트코드(-.class)<br>하드웨어 - 운영체제 - JVM - 자바프로그램|C 원시파일(-.cpp)<br>컴파일러/링커<br>바이너리 실행 파일(-.exe)<br>하드웨어 - 운영체제 - C/C++ 프로그램|
 
 <br>
 <br>
