binary search - recursive

--- a/_posts/develop/ds_ai/2025-03-23-al5.md
+++ b/_posts/develop/ds_ai/2025-03-23-al5.md
@@ -62,15 +62,15 @@ sidebar:
 **[ 이진 탐색 알고리즘 설계 ]**<br>
 **`기본 설계 원칙`**  <br>
 • 더 작은 인스턴스의 해로부터 원래 문제의 해를 구하는 방법 개발  <br>
-• 종료 조건 설정  <br>
+• 더 작은 인스턴스가 도달하게 될 종료 조건 설정  <br>
 • 종료 조건에 해당하는 경우의 해 결정
 
 **`프로그래밍 시 유의사항`**<br>
-• 재귀 호출에서 값이 바뀌는 변수만 인자로 사용<br>
-• **꼬리 재귀(tail-recursion)** 사용 권장: 재귀 호출 이후 작업 없음, 반복문으로 전환 시 메모리 효율성 ↑
+• 이 자료에서는 재귀 호출 중 값이 변할 수 있는 변수들만 재귀 루틴의 매개변수로 사용<br>
+• **꼬리 재귀(tail-recursion)** 사용 요구: 재귀 호출 이후 연산 없음, 꼬리재귀를 반복문 기반 알고리즘으로 전환 시 메모리 효율성 ↑
 
 **`주의`**<br>
-• 재귀 루틴의 경우, **스택에 쌓이는 activation record 수는 재귀 깊이에 비례함**
+• 재귀 루틴의 경우, **스택에 쌓이는 activation record 수는 재귀 호출이 도달한 깊이에 따라 결정**
 
 <br>
 
@@ -92,6 +92,7 @@ sidebar:
 
 ```c
 /*
+problem: 크기가 n인 정렬된 배열에서 x 찾기
 input: 정수 n, 정렬된 배열 S[1...n], 탐색 키 x 
 output: x가 있는 위치(없으면 0 반환)
 */
@@ -114,12 +115,30 @@ index location(index low, index high)
 
 
 **[ 최악의 시간 복잡도 분석 ]**<br>
-• 재귀 함수: $t_n = t_{n/2} + 1,\quad t_1 = 1$<br>
-• 몇 가지 값으로 확인: $t_2 = 2, t_4 = 3, t_8 = 4, t_16 = 5$<br>
-• 일반화: $t_n = \log_2 n + 1$<br>
-• 귀납적 증명:<br>
-👉 **기초**: $t_1 = \log_2 1 + 1 = 1$<br>
-👉 **귀납 단계**: $t_{2n} = \log_2(2n) + 1$
+$W(n) = W(n/2) + 1$<br>
+$W(n/2)$: 재귀호출에서의 비교<br>
+$1$: top level에서의 비교
+
+
+• $t_n = \log_2 n + 1 \quad$ 몇 개의 값을 통해 확인<br>
+$t_2 &= t_{2/2} + 1 = t_1 + 1 = 1 + 1 = 2$<br>
+$t_4 &= t_{4/2} + 1 = t_2 + 1 = 2 + 1 = 3$<br>
+$t_8 &= t_{8/2} + 1 = t_4 + 1 = 3 + 1 = 4$<br>
+$t_{16} &= t_{16/2} + 1 = t_8 + 1 = 4 + 1 = 5$
+
+
+**귀납 기초 (Induction base)**: $t_1 = 1 = \log 1 + 1$
+
+**귀납 단계 (Induction step when $2n$)**  
+• (재귀는 2의 거듭제곱에 대해서만 정의됨)  
+• $t_{2n} = \log 2n + 1$
+
+- 증명 과정:
+$t_{2n} &= t_{2n/2} + 1 = t_n + 1$
+$= \log n + 1 + 1$
+$= \log n + \log 2 + 1$
+$= \log(2n) + 1$
+
 
 
 
