--- a/_posts/develop/ds_ai/2025-03-23-al5.md
+++ b/_posts/develop/ds_ai/2025-03-23-al5.md
@@ -121,22 +121,22 @@ $1$: top level에서의 비교
 
 
 • $t_n = \log_2 n + 1 \quad$ 몇 개의 값을 통해 확인<br>
-$t_2 &= t_{2/2} + 1 = t_1 + 1 = 1 + 1 = 2$<br>
-$t_4 &= t_{4/2} + 1 = t_2 + 1 = 2 + 1 = 3$<br>
-$t_8 &= t_{8/2} + 1 = t_4 + 1 = 3 + 1 = 4$<br>
-$t_{16} &= t_{16/2} + 1 = t_8 + 1 = 4 + 1 = 5$
+$t_2 = t_{2/2} + 1 = t_1 + 1 = 1 + 1 = 2$<br>
+$t_4 = t_{4/2} + 1 = t_2 + 1 = 2 + 1 = 3$<br>
+$t_8 = t_{8/2} + 1 = t_4 + 1 = 3 + 1 = 4$<br>
+$t_{16} = t_{16/2} + 1 = t_8 + 1 = 4 + 1 = 5$
 
 
-**귀납 기초 (Induction base)**: $t_1 = 1 = \log 1 + 1$
+`귀납 기초 (Induction base)`: $t_1 = 1 = \log 1 + 1$
 
-**귀납 단계 (Induction step when $2n$)**  
-• (재귀는 2의 거듭제곱에 대해서만 정의됨)  
+`귀납 단계 (Induction step when $2n$)`<br> 
+• (재귀는 2의 거듭제곱에 대해서만 정의됨) <br>  
 • $t_{2n} = \log 2n + 1$
 
-- 증명 과정:
-$t_{2n} = t_{2n/2} + 1 = t_n + 1$
-$= \log n + 1 + 1$
-$= \log n + \log 2 + 1$
+`증명 과정`<br>
+$t_{2n} = t_{2n/2} + 1 = t_n + 1$<br>
+$= \log n + 1 + 1$<br>
+$= \log n + \log 2 + 1$<br>
 $= \log(2n) + 1$
 
 
