--- a/_posts/develop/ds_ai/2025-03-23-al5.md
+++ b/_posts/develop/ds_ai/2025-03-23-al5.md
@@ -282,6 +282,95 @@ void merge2(index low, index mid, index high) {
 
 ## Quick Sort (퀵 정렬)
 
+**[ 퀵 정렬 ]**
+> 피벗을 기준으로 나누고, 각각 정렬하는 방식
+
+
+**[ 예시 ]**
+
+```c
+                        [15 22 13 27 12 10 20 25]
+                              /         |         \
+                        [10 13 12]     [15]    [22 27 20 25]
+                          /                      \
+                       [10]                  [20] [22] [27 25]
+                         \                             \
+                     [12 13]                         [25 27]
+```
+
+|예시|설명|
+|---|---|
+|`15 22 13 27 12 10 20 25`|처음|
+|`10 13 12 [15] 22 27 20 25`|피벗(15)을 기준으로 배열 나누기<br>• 피벗보다 작은 값은 왼쪽, 큰 값은 오른쪽|
+|`10 13 12 → 10 12 13`, `22 27 20 25 → 20 22 25 27`|두 부분 배열 각각 정렬|
+|`15 22 13 27 12 10 20 25`|정렬|
+
+
+**[ 시간 복잡도 ]**
+
+`Partition의 시간복잡도`
+> 입력 배열의 크기에 따라 $T(n) = n - 1$ (피벗 빼고 나머지 비교)
+
+
+`최악의 경우 시간 복잡도`
+> 피벗이 항상 가장 작거나, 가장 큰 값일 경우
+• 정렬이 한쪽으로만 이루어짐
+• 왼쪽 서브배열(0개), 오른쪽 서브배열(n-1개)
+
+• $W(n) = T(0) + T(n-1) + (n-1)$
+$T(0)$: 원소 n개를 정렬하는 데 걸리는 최악의 경우 시간
+$T(n)$: 왼쪽 부분 배열 정렬 시간 (비어있음 → 0)
+$T(n-1)$: 오른쪽 배열 정렬 시간 (피벗 제외 나머지 모두)
+$n-1$: 파티션 비용
+
+• 재귀적 방정식
+$T(n) = T(n - 1) + n - 1, (for n > 0)$<br>
+$T(0) = 0$<br>
+solution: $T(n) = n(n-1)/2$ > $O(n^2)$ 시간복잡도
+
+
+
+`평균의 경우 시간 복잡도`
+> 모든 위치가 피벗이 될 확률이 동일($p = 1/n$)하다고 가정할 때, A(n)<br>
+$A(n) = \sum_{p=1}^{n} \frac{1}{n} \left[ A(p-1) + A(n-p) \right] + (n - 1)$<br>
+• 앞부분: 피벗 위치 p에 따라 양쪽 서브배열을 정렬하는 평균 시간
+• 뒤의 (n - 1)은 파티션하는 데 걸리는 시간
+
+• 근사화하면 $A(n) \approx (n + 1) \cdot 2 \ln n \approx 1.38(n + 1)\log n \in \Theta(n \log n)$
+• 평균적으로 매우 효율적인 정렬 알고리즘
+
+**[ 의사코드 ]**
+
+```c
+// 제자리 파티셔닝 방식이라 별도 배열 안 씀
+// 선형 시간 복잡도
+/*
+문제: Quicksort를 위해 배열 S를 파티션(partition)하라
+입력: 두 인덱스: low와 high, 배열 S[low ... high] (부분 배열)
+출력: pivotpoint: 정렬 후 피벗이 위치하게 되는 인덱스
+*/
+void partition(index low, index high, index& pivotpoint) {
+    index i, j;
+    keytype pivotitem;
+
+    // 피벗 항목을 배열의 첫 번째 원소로 선택
+    pivotitem = S[low];
+    j = low;
+
+    // low+1부터 high까지 반복하며 파티션 수행
+    for (i = low + 1; i <= high; i++) {
+        if (S[i] < pivotitem) {
+            j++;
+            exchange S[i] and S[j]; // 작은 값들을 앞으로 모음
+        }
+    }
+
+    // 피벗의 최종 위치를 저장
+    pivotpoint = j;
+    exchange S[low] and S[pivotpoint]; // 피벗을 제자리에 배치
+}
+```
+
 ## 각 알고리즘의 재귀적 구조 및 시간 복잡도 분석
 
 
