--- a/_posts/develop/ds_ai/2025-03-23-al5.md
+++ b/_posts/develop/ds_ai/2025-03-23-al5.md
@@ -289,13 +289,13 @@ void merge2(index low, index mid, index high) {
 **[ 예시 ]**
 
 ```c
-                        [15 22 13 27 12 10 20 25]
-                              /         |         \
-                        [10 13 12]     [15]    [22 27 20 25]
-                          /                      \
-                       [10]                  [20] [22] [27 25]
-                         \                             \
-                     [12 13]                         [25 27]
+    [15 22 13 27 12 10 20 25]
+            /         |         \
+    [10 13 12]     [15]    [22 27 20 25]
+        /                      \
+    [10]                  [20] [22] [27 25]
+        \                             \
+    [12 13]                         [25 27]
 ```
 
 |예시|설명|
@@ -371,56 +371,129 @@ void partition(index low, index high, index& pivotpoint) {
 }
 ```
 
-## 각 알고리즘의 재귀적 구조 및 시간 복잡도 분석
+
+## Factorial
+
+```c
+/*
+문제: n! = n × (n-1) × (n-2) × ... × 3 × 2 × 1 (단, n ≥ 1), 0! = 1
+입력: 음이 아닌 정수 n
+출력: n!
+*/
+int fact(int n) {
+    if (n == 0)
+        return 1;
+    else
+        return n * fact(n - 1);
+}
+```
+
+
+
+**[ 팩토리얼 알고리즘의 효율성 ]**
+**1) 곱셈 횟수를 재귀식(recurrence equation) 으로 표현**
+`재귀 방정식: 재현식`
+> $t_n = t_(n-1) + 1$<br>
+• $t_n$: 재귀호출 시 곱셈 횟수<br>
+• $1$: 최상위 수준에서의 곱셈 1회<br>
+→ 함수의 값이 작은 n의 값을 이용해 큰 n의 값을 구함
+
+**초기 조건**: $t_0 = 0$ (0! = 1이므로 곱셈 없음)
+
+**n이 클 때의 $t_n$ 계산 예시**
+• `t₁ = t₀ + 1 = 0 + 1 = 1`<br>
+• `t₂ = t₁ + 1 = 1 + 1 = 2`<br>
+• `t₃ = t₂ + 1 = 2 + 1 = 3`
+
+결론: `tₙ`을 `t₀`부터 반복 계산하는 건 비효율적이다 → 
+
+**2) 곱셈 횟수를 후보 해(candidate solution) 를 통해 구하기**
+
+
+​
+• $t_n$에 대한 명시적 표현(해)을 얻기: $t_n = t_(n-1) + 1$
+👉 귀납법으로 해를 찾는 것은 불가능하지만, 후보 해가 맞는지를 확인하는 데는 귀납법을 사용할 수 있음
+• 초반 몇 개 값을 확인
+
+```c
+t₁ = t₀ + 1 = 0 + 1 = 1
+t₂ = t₁ + 1 = 1 + 1 = 2
+t₃ = t₂ + 1 = 2 + 1 = 3
+```
+
+• 후보 해 추정: $t_n = n$
+
+**3) 후보 해의 정당성 증명**
+`n = 0`: $t_0 = 0$<br>
+`귀납가정(Induction Hypothesis)`: $t_n = n$
+`귀납단계(Induction Step)`: $t(n+1) = n + 1$이 참임을 증명<br>
+`결론`: $t_(n+1) = t_((n+1)-1) + 1 = t_n + 1 = n + 1$
+
+
+# 재귀식
+## 재귀식이란
+
+
+**[ 재귀식 예시 ]**<br>
+**1) 예제 1**<br>
+**`주어진 재귀식`**<br>
+$t_n = t_{n/2} + 1$(단, \(n > 1\), \(n\)은 2의 거듭제곱)<br>
+$t_1 = 1$
+
+**`점검 (Inspection)`**<br>
+$t_2 = t_{2/2} + 1 = t_1 + 1 = 1 + 1 = 2$  <br>
+$t_4 = t_{4/2} + 1 = t_2 + 1 = 2 + 1 = 3$<br>
+$t_8 = t_{8/2} + 1 = t_4 + 1 = 3 + 1 = 4$ <br>
+$t_{16} = t_{16/2} + 1 = t_8 + 1 = 4 + 1 = 5$
+
+**`*추정 (Estimation)`**<br>
+$t_n = \log n + 1$
+
+**`정당성 증명 (Proof of the correctness)`**<br>
+$n = 1$일 때: $t_1 = 1 = \log 1 + 1$
+
+**`귀납 가정 (Induction hypothesis)`**  <br>
+$t_n = \log n + 1$
+
+**`귀납 단계 (Induction step)`** – $2n$을 대입하여 다음을 보여야 함:<br>
+$t_{2n} = \log (2n) + 1$
+
+**`결론`**
+$t_{2n} = t_{(2n)/2} + 1 = t_n + 1 = \log n + 1 + 1$<br>
+$= \log n + \log 2 + 1$<br>
+$= \log (2n) + 1$
+
+
+
+
+
+
+
+**[ 재귀식의 종류 ]**
+선형 동차(동질) 재귀식 (Homogeneous Linear Recurrence)
+비동차(비동질) 재귀식 (Nonhomogeneous Recurrence)
+
+**[ 용어 정리 ]**
+후보해
+일반해
+
+
+
+## 재귀식의 해 구하기
+
+
+
+
+
+
+**2. 후보 해(candidate solution)를 통한 일반해 추정**
 
 
 <br>
 <br>
 <br>
 
-# 고급 알고리즘과 최적화
-Strassen의 행렬 곱셈 알고리즘
-
-큰 정수 곱셈 및 개선된 알고리즘
-
-Threshold 개념 (알고리즘 전환 시점)
 
 
-<br>
-<br>
-<br>
 
-# 재귀 관계식의 수학적 해석
-수학적 귀납법을 통한 해법
-
-Factorial 및 단순한 예제 풀이
-
-시간 복잡도 분석의 기초로서의 재귀식
-
-
-<br>
-<br>
-<br>
-
-# 재귀식 풀이 고급 기법
-
-특성 방정식을 이용한 해법 (동차 / 비동차)
-
-일반해 도출, 상수 결정, 다항식 포함 사례
-
-변수 치환 기법과 대입법(Substitution)
-
-
-<br>
-<br>
-<br>
-
-# 점근적 분석 및 마스터 정리
-
-
-시간 복잡도 함수 분석 (lg n, n log n 등)
-
-일반 n에 대한 확장 기법
-
-Master Theorem 및 확장 사례
 
