--- a/_posts/develop/ds_ai/2025-03-23-al5.md
+++ b/_posts/develop/ds_ai/2025-03-23-al5.md
@@ -436,41 +436,58 @@ t₃ = t₂ + 1 = 2 + 1 = 3
 
 **[ 재귀식 예시 ]**<br>
 **1) 예제 1**<br>
-**`주어진 재귀식`**<br>
-$t_n = t_{n/2} + 1$(단, \(n > 1\), \(n\)은 2의 거듭제곱)<br>
-$t_1 = 1$
 
-**`점검 (Inspection)`**<br>
-$t_2 = t_{2/2} + 1 = t_1 + 1 = 1 + 1 = 2$  <br>
-$t_4 = t_{4/2} + 1 = t_2 + 1 = 2 + 1 = 3$<br>
-$t_8 = t_{8/2} + 1 = t_4 + 1 = 3 + 1 = 4$ <br>
-$t_{16} = t_{16/2} + 1 = t_8 + 1 = 4 + 1 = 5$
-
-**`*추정 (Estimation)`**<br>
-$t_n = \log n + 1$
-
-**`정당성 증명 (Proof of the correctness)`**<br>
-$n = 1$일 때: $t_1 = 1 = \log 1 + 1$
-
-**`귀납 가정 (Induction hypothesis)`**  <br>
-$t_n = \log n + 1$
-
-**`귀납 단계 (Induction step)`** – $2n$을 대입하여 다음을 보여야 함:<br>
-$t_{2n} = \log (2n) + 1$
-
-**`결론`**
-$t_{2n} = t_{(2n)/2} + 1 = t_n + 1 = \log n + 1 + 1$<br>
-$= \log n + \log 2 + 1$<br>
-$= \log (2n) + 1$
+|구분|내용|
+|:---:|---|
+|**`주어진 재귀식`**|$t_n = t_{n/2} + 1$(단, \(n > 1\), \(n\)은 2의 거듭제곱)<br>$t_1 = 1$|
+|**`점검 (Inspection)`**|$t_2 = t_{2/2} + 1 = t_1 + 1 = 1 + 1 = 2$  <br>$t_4 = t_{4/2} + 1 = t_2 + 1 = 2 + 1 = 3$<br>$t_8 = t_{8/2} + 1 = t_4 + 1 = 3 + 1 = 4$ <br>$t_{16} = t_{16/2} + 1 = t_8 + 1 = 4 + 1 = 5$|
+|**`*추정 (Estimation)`**|$t_n = \log n + 1$|
+|**`정당성 증명 (Proof of the correctness)`**|$n = 1$일 때: $t_1 = 1 = \log 1 + 1$|
+|**`귀납 가정 (Induction hypothesis)`**|$t_n = \log n + 1$|
+|**`귀납 단계 (Induction step)`**|$2n$을 대입하여 다음을 보여야 함:<br>$t_{2n} = \log (2n) + 1$|
+|**`결론`**|$t_{2n} = t_{(2n)/2} + 1 = t_n + 1 = \log n + 1 + 1$<br>$= \log n + \log 2 + 1$<br>$= \log (2n) + 1$|
 
 
+**2) 예제 2**
+
+|구분|내용|
+|:---:|---|
+|**주어진 재귀식**|$t_n = 7t_{n/2}$ (단, $n > 1,n$은 $2$의 거듭제곱)<br>$t_1 = 1$|
+|**점검 (Inspection)**|$t_2 = 7t_{2/2} = 7t_1 = 7$<br>$t_4 = 7t_{4/2} = 7t_2 = 7^2$<br>$t_8 = 7t_{8/2} = 7t_4 = 7^3$<br>$t_{16} = 7t_{16/2} = 7t_8 = 7^4$|
+|**추정 (Estimation)**|$t_n = 7^{\log n}$
+|**정당성 증명 (Proof of the correctness)**|
+$n = 1$ 일 때: $t_1 = 1 = 7^0 = 7^{\log 1}$||**귀납 가정 (Induction hypothesis)**|$t_n = 7^{\log n}$|
+|**귀납 단계 (Induction step)**|$t_{2n} = 7^{\log (2n)}$|
+|**결론 (Conclusion)**|$t_{2n} = 7t_{(2n)/2} = 7t_n = 7 \times 7^{\log n} = 7^{1 + \log n} = 7^{\log 2 + \log n} = 7^{\log (2n)}$<br>$\therefore t_n = n^{\log 7} \approx n^{2.81}$ (왜냐하면 $7^{\log n} = n^{\log 7}$)
 
 
+**3)*명확한 후보 해(candidate solution)가 없는 경우**
+
+|구분|내용|
+|:---:|---|
+|**주어진 재귀식**|$t_n = 2t_{n/2} + n - 1$ (단, $n > 1, n$은 2의 거듭제곱)<br>
+$t_1 = 0$|
+|**점검 (Inspection)**|$t_2 = 2t_{2/2} + 2 - 1 = 2t_1 + 1 = 1$<br>$t_4 = 2t_{4/2} + 4 - 1 = 2t_2 + 3 = 5$<br>$t_8 = 2t_{8/2} + 8 - 1 = 2t_4 + 7 = 17$<br>$t_{16} = 2t_{16/2} + 16 - 1 = 2t_8 + 15 = 49$|
+|**추정 (Estimation)**|???|
 
 
 
 **[ 재귀식의 종류 ]**
 선형 동차(동질) 재귀식 (Homogeneous Linear Recurrence)
+> $a_0t_n + a_1t_{n-1} + ... + a_kt_{n-k} = 0$<br>
+👉 여기서 $k$와 각 $a_i$들은 상수일 때, 이를
+상수 계수를 갖는 동차 선형 재귀식(homogeneous linear recurrence equation with constant coefficients)<br>
+• 선형(linear)인 이유: 모든 항 $t_1$가 1차로만 등장하기 때문<br>
+• 다음 항은 포함하지 않음: $t_{2n-i}, t_{n-1}t{n-j}$<br>
+• $c$가 1이 아닌 양의 상수일 경우, 다음 항도 포함하지 않음: $t_{c(n-i)}$
+
+`예시`<br>
+동차 선형 상수 계수 재귀식 (Homogeneous Linear Recurrence Equations with Constant Coefficients)<br>
+$7t_n - 3t_{n-1} = 0$<br>
+$6t_n - 5t_{n-1} + 8t_{n-2} = 0$<br>
+$8t_n - 4t_{n-3} = 0$
+
+
 비동차(비동질) 재귀식 (Nonhomogeneous Recurrence)
 
 **[ 용어 정리 ]**
@@ -479,9 +496,88 @@ $= \log (2n) + 1$
 
 
 
-## 재귀식의 해 구하기
+## 특성 방정식을 이용한 재귀식 풀이 
+(Solving Recurrences Using the Characteristic Equation)
 
 
+**[ 예시 ]**<br>
+
+피보나치 수열의 재귀식 (Fibonacci sequence recurrence equation)
+$t_n = t_{n-1} = t_{n-2}$<br>
+$t_0 = 0$, $t_1 = 1$
+
+동차 선형 재귀식 형태로 표현: $t_n - t_{n-1} - t_{n-2} = 0$
+
+
+**[ 예시 ]**<br>
+
+다음은 제공해주신 **슬라이드 4장**의 **정확한 번역**입니다.
+
+---
+
+### **특성 방정식을 이용한 재귀식 풀이**  
+**Solving Recurrences Using the Characteristic Equation**
+
+---
+
+#### **동차 선형 재귀식 예제로부터 재귀식 풀기 (1/4)**
+
+**주어진 재귀식**
+> $t_n - 5t_{n-1} + 6t_{n-2} = 0$ for n > 1$
+$t_0 = 0, t_1 = 1$
+
+**만약 $t_n = r^n$** 이라고 가정하면,
+$t_n - 5t_{n-1} + 6t_{n-2} = r^n - 5r^{n-1} + 6r^{n-2} = 0$
+
+$r^n - 5r^{n-1} + 6r^{n-2} = 0 \Rightarrow r^{n-2}(r^2 - 5r + 6) = 0$
+
+**해**
+$r = 0$, $r = 3$, $r = 2$ ()
+
+**결론적으로** $t_n = 0$, $t_n = 3^n$,$t_n = 2^n$
+
+**검증**<br>
+
+$t_n = 3^n$,$t_{n-1} = 3^{n-1}$,$t_{n-2} = 3^{n-2}$<br>
+$t_n - 5t_{n-1} + 6t_{n-2}$
+$3^n - 5(3^{n-1}) + 6(3^{n-2}) = 3^n - 3(3^{n-1}) = 3^n - 3^n = 0$<br>
+
+$t_n = 2^n$가 해인지도 확인함
+
+**일반해 (General Solution)**  
+$t_n = 0\), \(t_n = 3^n\), \(t_n = 2^n\) 이 해이므로 **재귀식의 일반해는 다음과 같음**<br>
+$t_n = c_1 3^n + c_2 2^n$(단, $c_1$, $c_2$는 임의의 상수)<br>
+$c_1 = c_2 = 0$일 경우, $t_n = 0$<br>
+
+일반해를 완성하려면 **초기 조건을 대입하여 $c_1, c_2$** 를 결정<br>
+
+**초기 조건** $t_0 = 0$,$t_1 = 1$
+
+**식 정리**:  
+$t_0 = c_1 3^0 + c_2 2^0 = c_1 + c_2 = 0$
+$t_1 = c_1 3^1 + c_2 2^1 = 3c_1 + 2c_2 = 1$
+
+**정리 (Simplifying)**:
+$c_1 + c_2 = 0$
+$3c_1 + 2c_2 = 1$
+
+
+$c_1$, $c_2$를 구해서 일반해를 완성하기 위해 **초기 조건을 사용**
+
+결론적으로:$c_1 = 1$, $c_2 = -1$
+
+$t_n = 1 \cdot (3^n) - 1 \cdot (2^n) = 3^n - 2^n$
+
+
+다른 초기 조건 사용 시<br>
+$t_0 = 1,\quad t_1 = 2$<br>
+$t_0 = c_1 3^0 + c_2 2^0 = 1$<br>
+$t_1 = c_1 3^1 + c_2 2^1 = 2$<br>
+$c_1 + c_2 = 1$<br>
+$3c_1 + 2c_2 = 2$<br>
+$c_1 = 0,\quad c_2 = 1$<br>
+
+$t_n = 0 \cdot (3^n) + 1 \cdot (2^n) = 2^n$
 
 
 
