--- a/_posts/develop/ds_ai/2025-03-23-al5.md
+++ b/_posts/develop/ds_ai/2025-03-23-al5.md
@@ -10,8 +10,7 @@ sidebar:
    nav: "docs"
 ---
 <br>
-<br>
-<br>
+
 
 
 # 분할 정복(Divide and Conquer)과 기본 알고리즘
@@ -19,11 +18,12 @@ sidebar:
 ## Divide and Conquer 개념 및 Top-Down 방식
 
 **[ 분할정복법 ]**
-> `분할 정복법`은 문제를 더 작은 하위 문제로 나누고, 각 하위 문제를 독립적으로 해결한 뒤, 그 결과를 합쳐 원래 문제의 해답을 구하는 알고리즘 설계 기법<br>
+> 문제를 더 작은 하위 문제로 나누고, 각 하위 문제를 독립적으로 해결한 뒤, 그 결과를 합쳐 원래 문제의 해답을 구하는 알고리즘 설계 기법<br>
 • `Divide (분할)`: 문제를 더 작은 하위 문제로 나눔<br>
 • `Conquer (정복)`: 하위 문제를 재귀적으로 해결<br>
 • `Combine (결합)`: 하위 문제의 해를 이용해 전체 문제의 해를 구성
 
+<br>
 
 **[ top-down 방식 ]**<br>
 > • 하나의 문제 인스턴스를 두 개 이상의 더 작은 인스턴스로 나눔<br>
@@ -41,21 +41,17 @@ sidebar:
 ## Binary Search (이진 탐색) - 재귀적
 
 **[ Binary Search 문제 ]**<br>
-**`정의`**  
-> 정렬된(비감소 순서) 배열에서 키 `x`의 위치를 찾는 문제
+**`정의`** 정렬된(비감소 순서) 배열에서 키 `x`의 위치를 찾는 문제
 
-**`방법`** 
-> 배열의 가운데 항목과 `x`를 비교함<br>
+**`방법`** 배열의 가운데 항목과 `x`를 비교함<br>
 • 같으면 알고리즘 종료<br>
 • 다르면 배열을 두 부분으로 나눔: 가운데 항목의 왼쪽 부분, 가운데 항목의 오른쪽 부분
 
 **`핵심 단계`**  <br>
 • 배열을 절반 크기의 두 부분으로 나눈다: `x`가 가운데보다 작으면 왼쪽 부분, 크면 오른쪽 부분 선택 <br>
 • 해당 부분에서 `x`가 있는지 확인, 크기가 충분히 작지 않으면 재귀 호출 사용  <br>
-• 해당 부분에서의 결과가 전체 배열에 대한 해답이 됨
-
-**`특이사항`**  
-> 작은 인스턴스로 나누지만, 그들의 **출력을 결합하지 않음**
+• 해당 부분에서의 결과가 전체 배열에 대한 해답이 됨<br>
+• `특이사항` 작은 인스턴스로 나누지만, 그들의 **출력을 결합하지 않음**
 
 <br>
 
@@ -67,16 +63,13 @@ sidebar:
 
 **`프로그래밍 시 유의사항`**<br>
 • 이 자료에서는 재귀 호출 중 값이 변할 수 있는 변수들만 재귀 루틴의 매개변수로 사용<br>
-• **꼬리 재귀(tail-recursion)** 사용 요구: 재귀 호출 이후 연산 없음, 꼬리재귀를 반복문 기반 알고리즘으로 전환 시 메모리 효율성 ↑
-
-**`주의`**<br>
-• 재귀 루틴의 경우, **스택에 쌓이는 activation record 수는 재귀 호출이 도달한 깊이에 따라 결정**
+• **꼬리 재귀(tail-recursion)** 사용 요구: 재귀 호출 이후 연산 없음, 꼬리재귀를 반복문 기반 알고리즘으로 전환 시 메모리 효율성 ↑<br>
+• `주의` 재귀 루틴의 경우, **스택에 쌓이는 activation record 수는 재귀 호출이 도달한 깊이에 따라 결정**
 
 <br>
 
-**`예시`**
-
-> 정렬된 배열에서 `x = 18`을 찾는 과정:
+**[ 예시 ]**  
+> 정렬된 배열에서 `x = 18`을 찾는 과정
 
 ```
 [10 12 13 14 18 20 25 27 30 35 40 45 47]
@@ -85,8 +78,6 @@ sidebar:
 - 13과 비교 → x > 13 → 오른쪽 선택
 - 18과 비교 → x = 18 → 탐색 성공
 ```
-
-<br>
 
 **`의사코드`**
 
@@ -113,11 +104,12 @@ index location(index low, index high)
 }
 ```
 
+<br>
 
 **[ 최악의 시간 복잡도 분석 ]**<br>
-$W(n) = W(n/2) + 1$<br>
-$W(n/2)$: 재귀호출에서의 비교<br>
-$1$: top level에서의 비교
+> $W(n) = W(n/2) + 1$<br>
+• $W(n/2)$: 재귀호출에서의 비교<br>
+• $1$: top level에서의 비교
 
 
 • $t_n = \log_2 n + 1 \quad$ 몇 개의 값을 통해 확인<br>
@@ -127,17 +119,11 @@ $t_8 = t_{8/2} + 1 = t_4 + 1 = 3 + 1 = 4$<br>
 $t_{16} = t_{16/2} + 1 = t_8 + 1 = 4 + 1 = 5$
 
 
-`귀납 기초 (Induction base)`: $t_1 = 1 = \log 1 + 1$
-
-`귀납 단계 (Induction step when $2n$)`<br> 
-• (재귀는 2의 거듭제곱에 대해서만 정의됨) <br>  
-• $t_{2n} = \log 2n + 1$
-
-`증명 과정`<br>
-$t_{2n} = t_{2n/2} + 1 = t_n + 1$<br>
-$= \log n + 1 + 1$<br>
-$= \log n + \log 2 + 1$<br>
-$= \log(2n) + 1$
+|귀납법|적용|
+|:---:|---|
+|`귀납 기초 (Induction base)`|$t_1 = 1 = \log 1 + 1$|
+|`귀납 단계 (Induction step)`|when $2n$ <br> • (재귀는 2의 거듭제곱에 대해서만 정의됨)<br> • $t_{2n} = \log 2n + 1$|
+|`증명 과정`|$t_{2n} = t_{2n/2} + 1 = t_n + 1$<br>$= \log n + 1 + 1$<br>$= \log n + \log 2 + 1$<br>$= \log(2n) + 1$|
 
 
 
